@@ -46,8 +46,8 @@ THE SOFTWARE.
     <host>localhost</host>
     <!-- HTTP listener port -->
     <port>8080</port>
-    <node.version>14.16.0</node.version>
-    <yarn.version>1.22.10</yarn.version>
+    <node.version>16.15.1</node.version>
+    <yarn.version>1.22.19</yarn.version>
   </properties>
 
   <dependencyManagement>
@@ -64,16 +64,24 @@ THE SOFTWARE.
 
   <dependencies>
     <dependency>
-      <groupId>org.jenkins-ci</groupId>
-      <artifactId>executable-war</artifactId>
-      <version>2.3</version>
-      <scope>provided</scope>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>cli</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>remoting</artifactId>
+      <!-- specified in the parent -->
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>jenkins-core</artifactId>
       <version>${project.version}</version>
       <exclusions>
+        <exclusion>
+          <groupId>com.google.code.findbugs</groupId>
+          <artifactId>jsr305</artifactId>
+        </exclusion>
         <!--
           jars that are not needed in war. most of the exclusions should happen in the core, to make IDEs happy, not here.
         -->
@@ -86,55 +94,7 @@ THE SOFTWARE.
           <groupId>org.kohsuke.metainf-services</groupId>
           <artifactId>metainf-services</artifactId>
         </exclusion>
-        <exclusion>
-          <groupId>com.google.code.findbugs</groupId>
-          <artifactId>jsr305</artifactId>
-        </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>remoting</artifactId>
-      <!-- specified in the parent -->
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>cli</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <!--
-        not actually used by test but used by dependency plugin to include it inside the war.
-      -->
-      <groupId>org.jenkins-ci</groupId>
-      <artifactId>winstone</artifactId>
-      <!-- Make sure to keep jetty-maven-plugin elsewhere in this file in sync with the Jetty release in Winstone -->
-      <version>5.21</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>instance-identity</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>slave-installer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>windows-slave-installer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>launchd-slave-installer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>upstart-slave-installer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.modules</groupId>
-      <artifactId>systemd-slave-installer</artifactId>
     </dependency>
     <dependency>
       <!--
@@ -157,7 +117,6 @@ THE SOFTWARE.
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-jdk14</artifactId>
     </dependency>
-
     <!-- offline profiler API when we need it -->
     <!--dependency
       <groupId>com.yourkit.api</groupId>
@@ -166,11 +125,81 @@ THE SOFTWARE.
       <scope>system</scope>
       <systemPath>/usr/local/yjp/lib/yjp.jar</systemPath>
     </dependency-->
+    <dependency>
+      <!--
+        not actually used by test but used by dependency plugin to include it inside the war.
+      -->
+      <groupId>org.jenkins-ci</groupId>
+      <artifactId>winstone</artifactId>
+      <!-- Make sure to keep jetty-maven-plugin elsewhere in this file in sync with the Jetty release in Winstone -->
+      <version>5.25</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
     <finalName>jenkins</finalName>
     <plugins>
+      <!-- TODO When Java 8 usage declines to a terminal level, this can be deleted. -->
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>display-info</id>
+            <configuration>
+              <rules>
+                <requireJavaVersion>
+                  <version>1.8</version>
+                </requireJavaVersion>
+                <enforceBytecodeVersion>
+                  <maxJdkVersion>1.8</maxJdkVersion>
+                  <excludes>
+                    <exclude>org.jenkins-ci.main:cli</exclude>
+                    <exclude>org.jenkins-ci.main:jenkins-core</exclude>
+                  </excludes>
+                </enforceBytecodeVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- JENKINS-68021: Work around JDK-8206937 by clearing the release=8 flag. -->
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <testSource>1.8</testSource>
+          <testTarget>1.8</testTarget>
+          <release combine.self="override" />
+          <testRelease combine.self="override" />
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <release combine.self="override" />
+        </configuration>
+      </plugin>
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <!-- version specified in grandparent pom -->
@@ -179,9 +208,11 @@ THE SOFTWARE.
           <!-- for putting Main-Class into war -->
           <archive>
             <manifest>
-              <mainClass>Main</mainClass>
+              <mainClass>executable.Main</mainClass>
             </manifest>
             <manifestEntries>
+              <!-- Make sure to keep the directives in core/pom.xml and test/pom.xml in sync with these. -->
+              <Add-Opens>java.base/java.lang java.base/java.io java.base/java.util java.desktop/com.sun.beans.introspect</Add-Opens>
               <Implementation-Version>${project.version}</Implementation-Version>
               <Hudson-Version>1.395</Hudson-Version>
               <Jenkins-Version>${project.version}</Jenkins-Version>
@@ -207,21 +238,6 @@ THE SOFTWARE.
             </configuration>
           </execution>
           <execution>
-            <!-- put executable war header -->
-            <id>executable-war-header</id>
-            <goals>
-              <goal>unpack-dependencies</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <includeGroupIds>org.jenkins-ci</includeGroupIds>
-              <includeArtifactIds>executable-war</includeArtifactIds>
-              <includeScope>provided</includeScope>
-              <includes>**/*.class</includes>
-              <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
             <id>resgen</id>
             <goals>
               <goal>copy</goal>
@@ -233,7 +249,7 @@ THE SOFTWARE.
                 <artifactItem>
                   <groupId>org.jenkins-ci</groupId>
                   <artifactId>winstone</artifactId>
-                  <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
+                  <outputDirectory>${project.build.directory}/${project.build.finalName}/executable</outputDirectory>
                   <destFileName>winstone.jar</destFileName>
                 </artifactItem>
               </artifactItems>
@@ -258,7 +274,7 @@ THE SOFTWARE.
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>display-url-api</artifactId>
-                  <version>2.3.4</version>
+                  <version>2.3.6</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
@@ -276,7 +292,7 @@ THE SOFTWARE.
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>windows-slaves</artifactId>
-                  <version>1.0</version>
+                  <version>1.8.1</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
@@ -294,55 +310,64 @@ THE SOFTWARE.
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>script-security</artifactId>
-                  <version>1.75</version>
+                  <version>1172.v35f6a_0b_8207e</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>junit</artifactId>
-                  <version>1.47</version>
+                  <version>1119.1121.vc43d0fc45561</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit -->
                   <groupId>org.jenkins-ci.plugins.workflow</groupId>
                   <artifactId>workflow-api</artifactId>
-                  <version>2.42</version>
+                  <version>1144.v61c3180fa_03f</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>plugin-util-api</artifactId>
-                  <version>1.5.0</version>
+                  <version>2.16.0</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit -->
                   <groupId>io.jenkins.plugins</groupId>
-                  <artifactId>bootstrap4-api</artifactId>
-                  <version>4.5.3-1</version>
+                  <artifactId>bootstrap5-api</artifactId>
+                  <version>5.1.3-6</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>checks-api</artifactId>
-                  <version>1.1.1</version>
+                  <version>1.7.4</version>
                   <type>hpi</type>
                 </artifactItem>
+
                 <artifactItem>
-                  <!-- dependency of junit -->
+                  <!-- dependency of checks-api -->
+                  <groupId>org.jenkins-ci.plugins.workflow</groupId>
+                  <artifactId>workflow-support</artifactId>
+                  <version>813.vb_d7c3d2984a_0</version>
+                  <type>hpi</type>
+                </artifactItem>
+
+                <artifactItem>
+                  <!-- dependency of junit and echarts-api -->
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>jackson2-api</artifactId>
-                  <version>2.12.0</version>
+                  <version>2.13.2.20220328-273.v11d70a_b_a_1a_52</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>echarts-api</artifactId>
-                  <version>4.9.0-2</version>
+                  <version>5.3.2-1</version>
                   <type>hpi</type>
                 </artifactItem>
 
@@ -350,7 +375,15 @@ THE SOFTWARE.
                   <!-- dependency of jackson2-api -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>snakeyaml-api</artifactId>
-                  <version>1.27.0</version>
+                  <version>1.29.1</version>
+                  <type>hpi</type>
+                </artifactItem>
+
+                <artifactItem>
+                  <!-- dependency of script-security -->
+                  <groupId>io.jenkins.plugins</groupId>
+                  <artifactId>caffeine-api</artifactId>
+                  <version>2.9.3-65.v6a_47d0f4d1fe</version>
                   <type>hpi</type>
                 </artifactItem>
 
@@ -358,31 +391,23 @@ THE SOFTWARE.
                   <!-- dependency of echarts-api and bootstrap4-api -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>jquery3-api</artifactId>
-                  <version>3.5.1-2</version>
+                  <version>3.6.0-2</version>
                   <type>hpi</type>
                 </artifactItem>
 
                 <artifactItem>
-                  <!-- dependency of echarts-api -->
-                  <groupId>org.jenkins-ci.plugins</groupId>
-                  <artifactId>jackson2-api</artifactId>
-                  <version>2.12.0</version>
-                  <type>hpi</type>
-                </artifactItem>
-
-                <artifactItem>
-                  <!-- dependency of bootstrap4-api -->
+                  <!-- dependency of bootstrap5-api -->
                   <groupId>io.jenkins.plugins</groupId>
-                  <artifactId>popper-api</artifactId>
-                  <version>1.16.0-7</version>
+                  <artifactId>popper2-api</artifactId>
+                  <version>2.11.2-1</version>
                   <type>hpi</type>
                 </artifactItem>
 
                 <artifactItem>
-                  <!-- dependency of bootstrap4-api -->
+                  <!-- dependency of bootstrap5-api -->
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>font-awesome-api</artifactId>
-                  <version>5.15.1-1</version>
+                  <version>6.0.0-1</version>
                   <type>hpi</type>
                 </artifactItem>
 
@@ -390,27 +415,27 @@ THE SOFTWARE.
                   <!-- dependency of junit and workflow-api -->
                   <groupId>org.jenkins-ci.plugins.workflow</groupId>
                   <artifactId>workflow-step-api</artifactId>
-                  <version>2.23</version>
+                  <version>625.vd896b_f445a_f8</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of workflow-api -->
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>scm-api</artifactId>
-                  <version>2.6.5</version>
+                  <version>602.v6a_81757a_31d2</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <!-- dependency of junit and scm-api -->
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>structs</artifactId>
-                  <version>1.23</version>
+                  <version>308.v852b473a2b8c</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
                   <groupId>org.jenkins-ci.plugins</groupId>
                   <artifactId>bouncycastle-api</artifactId>
-                  <version>2.25</version>
+                  <version>2.26</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
@@ -434,7 +459,7 @@ THE SOFTWARE.
                 <artifactItem>
                   <groupId>org.jenkins-ci.modules</groupId>
                   <artifactId>sshd</artifactId>
-                  <version>3.0.3</version>
+                  <version>3.236.ved5e1b_cb_50b_2</version>
                   <type>hpi</type>
                 </artifactItem>
                 <artifactItem>
@@ -453,6 +478,12 @@ THE SOFTWARE.
                   <groupId>io.jenkins.plugins</groupId>
                   <artifactId>javax-mail-api</artifactId>
                   <version>1.6.2-5</version>
+                  <type>hpi</type>
+                </artifactItem>
+                <artifactItem>
+                  <groupId>org.jenkins-ci.modules</groupId>
+                  <artifactId>instance-identity</artifactId>
+                  <version>3.1</version>
                   <type>hpi</type>
                 </artifactItem>
               </artifactItems>
@@ -488,6 +519,27 @@ THE SOFTWARE.
         </executions>
       </plugin>
       <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>classes-copy</id>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <phase>prepare-package</phase>
+            <configuration>
+              <tasks>
+                <move todir="${project.build.directory}/${project.build.finalName}">
+                  <fileset dir="${project.build.directory}/classes">
+                    <include name="executable/**/*.class" />
+                  </fileset>
+                </move>
+              </tasks>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <!-- generate licenses.xml -->
         <groupId>com.cloudbees</groupId>
         <artifactId>maven-license-plugin</artifactId>
@@ -508,7 +560,7 @@ THE SOFTWARE.
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.43.v20210629</version>
+        <version>9.4.46.v20220331</version>
         <configuration>
           <!--
             Reload webapp when you hit ENTER. (See JETTY-282 for more)
